--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~8.2.14",
     "angular-material": "^1.1.24",
     "email-validator": "^2.0.4",
+    "ng-circle-progress": "^1.5.1",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
